--- a/css/ui/_site-logo.scss
+++ b/css/ui/_site-logo.scss
@@ -12,7 +12,7 @@
         margin-top: -$border-width;
         margin-left: $base-spacing-unit;
 
-        > svg {
+        svg {
             position: absolute;
             top: 0;
             left: 0;
